plugins/kotlin/idea/tests/testData/multiplatform/supertypes/d0/d0.kt
package d0

interface <!LINE_MARKER("descr='Is implemented by Supertype [d2]  Click or press ... to navigate'")!>AnotherSupertype<!> {
    fun another()
}
